--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ if ("ontouchstart" in document.documentElement) {
     Of course you can wrap it in any kind of "DOM ready" event, but I was too lazy to do so ;)
     
 -->
-<script src="static/impress.js/js/impress.js"></script>
+<script src="static/js/impress.js"></script>
 <script>impress().init();</script>
 
 <!--
