--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@ if ("ontouchstart" in document.documentElement) {
 -->
 <script src="static/js/impress.js"></script>
 <script>impress().init();</script>
+<script src="http://localhost:35729/livereload.js"></script>
 
 <!--
     
