--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
         <h4>git 入门</h4>
         <hr />
         <h2>THE END</h2>
-        <q> Thank you! </p>
+        <p> Thank you! </p>
+        <p> You can find this document here: git@github.com:lihongxun945/git-ppt.git</p>
     </div>
 
 <script src="static/js/impress.js"></script>
